# django-project

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  install_pyenv.sh  manage.py  pyproject.toml
.github/actions/setup_python_and_dependencies/: action.yaml
.github/workflows/: ci.yaml
apps/blog/: apps.py  views.py
apps/blog/templates/blog/: home.html
django_practice/: settings.py  urls.py
